<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="main_fragment_label">Notes</string>
    <string name="detail_fragment_label">Selected Note</string>
    <string name="detail">Detail</string>

    <string name="shortcut_add_note_longlabel">derpiderp</string>
    <string name="shortcut_add_note_shortlabel">derp</string>
    <string name="hello_main_fragment">Hello main fragment</string>
    <string name="hello_detail_fragment">Hello detail fragment. Arg: %1$s</string>
    <string name="there_are_no_notes">There are no notes</string>
    <string name="addnote_title_hint">Title</string>
    <string name="addnote_text_hint">Text</string>
    <string name="addnote_add">Add Note</string>
    <string name="detail_text_hint">Text</string>
    <string name="detail_save">Save</string>
    <string name="detail_title_hint">Title</string>
    <string name="fragment_addnote_label">New Note</string>
    <string name="detail_delete">Delete</string>
    <string name="detail_delete_snackbar">Note deleted</string>
    <string name="detail_delete_snackbar_action">undo</string>
</resources>
