<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.detail.DetailFragment"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_detail_text"
        android:layout_margin="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/detail_title_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_detail_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_detail_title"
        app:layout_constraintBottom_toTopOf="@id/b_detail_save"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/detail_text_hint"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_detail_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_detail_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_save"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>